Fix post modal on Firefox

--- a/src/components/NewPostModal/NewPostModal.module.css
+++ b/src/components/NewPostModal/NewPostModal.module.css
@@ -7,6 +7,7 @@
   padding: 0;
   min-height: 0;
   aspect-ratio: 1/1;
+  width: 100%;
 }
 
 .nextButton {
